- Bugfix: fixed black/transparent textures on Tall Doors
- Bugfix: fixed red_sand_layer texture showing as sand
- Bugfix: fixed slab_layer removing block from inventory on placement of double_slab in Slab Mode

-0.2.1
- Slab variants are now just called Layers (Sorry if this breaks any builds, but it just makes sense to avoid confusion with vanilla slabs)
- Vertical Slab variants are now just called Vertical Layers
- Corner Slab and Vertical Corner Slab variants have new layers functionality (again this may break some builds, but it makes sense to have them function like the other layered blocks)
- Eighth variants have new layers functionality (again this may break some builds, but it makes sense to have them function like the other layered blocks)
- Added check for if dataGen is running
- Added Acacia, Bamboo, Birch, Dark_Oak, Jungle, Mangrove, Oak, Spruce, Crimson and Warped Roof Blocks
- Added Bamboo, Cherry and Mangrove Tall Doors
- Refactored all Tall Doors to better match naming conventions woodname_tall_door.  Sorry for any inconvenience this may cause.
- Removed deprecated BlockRenderLayers and replaced with RenderLayer setting in models
- Removed unused Global Loot Modifiers (moved to Natures Canvas)
- Removed unused Biome Modifier (all world gen is now in Natures Canvas)
- Removed unused Tags
- Removed dulicate wooden Pressure Plate variants
- Added Tags data gen to ensure all Minecraft, Forge and Custom tags are accounted for

-0.2.2
- Added Diagonal Beam variants for all Stripped Wood

-0.2.3 (in progress)
- Downgraded Forge Version <- 47.1.3 to allow NeoForge 1.20.1 support
- Added missing recipes for Diagonal Beams
- Added Mossy Cobblestone variants
- Added Mossy Stone Brick variants
- Added Smooth Stone variants
- Added mod compatibility for Biomes O' Plenty
- Added mod compatibility for Regions Unexplored
- Added missing translations for en_us
- Bugfix: fixed ArchBlock textures not displaying correctly in all situations



