@@ -367,6 +367,8 @@ _ Added all Terracotta Roof variants
 - Added mod compatibility for Biomes O' Plenty
 - Added mod compatibility for Regions Unexplored
 - Added missing translations for en_us
+- Added filters for Blockpicker showing vanilla block families (linked to Buildify Config)
+- Bugfix: fixed Polished Granite BlockPicker displaying Granite stairs and walls, (now displays Polished Granite variants)
 - Bugfix: fixed ArchBlock textures not displaying correctly in all situations
 
 
